rs/macros/tests/ui/gprogram_fails_unknown_args.stderr
error: `gprogram` attribute can only contain `handle_reply` and `handle_signal` parameters
 --> tests/ui/gprogram_fails_unknown_args.rs:5:12
  |
5 | #[gprogram(_handle_reply = my_handle_reply, handle_signal = my_handle_signal)]
  |            ^^^^^^^^^^^^^
